# gddns

./: Cargo.toml  LICENSE  README.md  example-config.toml
.github/workflows/: build.yml  release.yml
pkg/: config.toml
pkg/debian/: postinst
pkg/systemd/: gddns.service  gddns.timer
src/: config.rs  ddns.rs  ip_cache.rs  main.rs  response_cache.rs  update.rs
