[package]
name = "gddns"
version = "2.1.0"
edition = "2021"
authors = ["Julian Andrews <jandrews271@gmail.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/julianandrews/gddns"
description = "Dynamic DNS client"

[dependencies]
anyhow = "1.0.64"
clap = { version = "3.2.20", features = ["derive"] }
toml = "0.5"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
public-ip = "0.2.2"
tokio = { version = "1.21.1", features = ["macros"] }
